--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,19 @@
             <artifactId>bootstrap-icons</artifactId>
             <version>1.11.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.webjars/datatables -->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>datatables</artifactId>
+            <version>1.13.5</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.webjars/jquery -->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery</artifactId>
+            <version>3.7.1</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.postgresql</groupId>
