--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.hibernate.ddl-auto=create-drop
 server.port=8084
+
+spring.mvc.format.date-time=yyyy-MM-dd'T'HH:mm:ss
+spring.mvc.format.date=yyyy-MM-dd'T'HH:mm:ss
+spring.mvc.format.time=HH:mm:ss
