refactor service, mapper, dto, front

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,15 +2,15 @@ spring.datasource.url=jdbc:postgresql://localhost:5433/gtacdb
 spring.datasource.username=gtacadmin
 spring.datasource.password=gtacadmin
 spring.jpa.show-sql=true
-
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.hibernate.ddl-auto=create-drop
 server.port=8084
 
 spring.mvc.format.date-time=yyyy-MM-dd'T'HH:mm:ss
-spring.mvc.format.date=yyyy-MM-dd'T'HH:mm:ss
+spring.mvc.format.date=yyyy-MM-dd
 spring.mvc.format.time=HH:mm:ss
+
 
 #spring.datasource.url=jdbc:h2:mem:gtac-db
 #spring.h2.console.enabled=true
