--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.mvc.format.time=HH:mm:ss
 #spring.jpa.properties.hibernate.format_sql=true
 
 # Pour des détails supplémentaires, activez les logs au niveau DEBUG pour org.hibernate.SQL
-logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.SQL=DEBUG
 
 # Optionnel: pour afficher les valeurs des paramètres liés dans les requêtes SQL
-logging.level.org.hibernate.type.descriptor.sql=TRACE
+#logging.level.org.hibernate.type.descriptor.sql=TRACE
